kubernetes/minikube/manifests/config/envoy.json
{
  "node": {
    "id": "01GHZD1RHTK6BP62B8VN2G491M--01GJSBGDR3M93HVN6PWS2V7XVR",
    "cluster": "localhost",
    "metadata": {
        "domain": "localhost"
      }
  },
  "static_resources": {
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 10000
          }
        },
        "filter_chains": [
          {
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "stat_prefix": "ingress_http",
                  "route_config": {
                    "name": "local_route",
                    "virtual_hosts": [
                      {
                        "name": "catch_all_vhost",
                        "domains": [
                          "*"
                        ],
                        "routes": [
                          {
                            "match": {
                              "prefix": "/maven2"
                            },
                            "route": {
                              "cluster": "maven-central",
                              "prefix_rewrite": "/maven2",
                              "host_rewrite_literal": "repo.maven.apache.org",
                              "timeout": "0s"
                            }
                          },
                          {
                            "match": {
                              "prefix": "/gradle-plugins/m2"
                            },
                            "route": {
                              "cluster": "gradle-plugins",
                              "prefix_rewrite": "/m2",
                              "host_rewrite_literal": "plugins.gradle.org",
                              "timeout": "0s"
                            }
                          },
                          {
                            "match": {
                              "prefix": "/pypi"
                            },
                            "route": {
                              "cluster": "pypi_org",
                              "prefix_rewrite": "/pypi",
                              "host_rewrite_literal": "pypi.org",
                              "timeout": "0s"
                            }
                          }
                        ],
                        "request_headers_to_remove": [
                          "authorization"
                        ]
                      }
                    ]
                  },
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.ext_proc",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor",
                        "grpc_service": {
                          "envoy_grpc": {
                            "cluster_name": "ext-proc-tap"
                          }
                        },
                        "failure_mode_allow": true,
                        "processing_mode": {
                          "request_header_mode": "SEND",
                          "response_header_mode": "SEND",
                          "request_trailer_mode": "SKIP",
                          "response_trailer_mode": "SKIP"
                        },
                        "async_mode": true
                      }
                    },
                    {
                      "name": "envoy.filters.http.ext_authz",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz",
                        "grpc_service": {
                          "envoy_grpc": {
                            "cluster_name": "ext-authz-pdp"
                          }
                        },
                        "transport_api_version": "V3",
                        "with_request_body": {
                          "max_request_bytes": 8192,
                          "allow_partial_message": true,
                          "pack_as_bytes": true
                        },
                        "include_peer_certificate": true
                      }
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.stdout",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog"
                      }
                    }
                  ]
                }
              }
            ]
          }
        ]
      }
    ],
    "clusters": [
      {
        "name": "maven-central",
        "type": "LOGICAL_DNS",
        "load_assignment": {
          "cluster_name": "maven-central",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "repo.maven.apache.org",
                        "port_value": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "dns_lookup_family": "V4_ONLY",
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "sni": "repo.maven.apache.org"
          }
        }
      },
      {
        "name": "gradle-plugins",
        "type": "LOGICAL_DNS",
        "load_assignment": {
          "cluster_name": "gradle-plugins",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "plugins.gradle.org",
                        "port_value": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "dns_lookup_family": "V4_ONLY",
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "sni": "plugins.gradle.org"
          }
        }
      },
      {
        "name": "pypi_org",
        "type": "LOGICAL_DNS",
        "load_assignment": {
          "cluster_name": "pypi_org",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "pypi.org",
                        "port_value": 443
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "dns_lookup_family": "V4_ONLY",
        "transport_socket": {
          "name": "envoy.transport_sockets.tls",
          "typed_config": {
            "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
            "sni": "pypi.org"
          }
        }
      },
      {
        "name": "ext-authz-pdp",
        "type": "LOGICAL_DNS",
        "load_assignment": {
          "cluster_name": "ext-authz-pdp",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "pdp",
                        "port_value": 9000
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "typed_extension_protocol_options": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "explicit_http_config": {
              "http2_protocol_options": {

              }
            }
          }
        },
        "dns_lookup_family": "V4_ONLY"
      },
      {
        "name": "ext-proc-tap",
        "type": "LOGICAL_DNS",
        "load_assignment": {
          "cluster_name": "ext-proc-tap",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "tap",
                        "port_value": 9001
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "typed_extension_protocol_options": {
          "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
            "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
            "explicit_http_config": {
              "http2_protocol_options": {

              }
            }
          }
        },
        "dns_lookup_family": "V4_ONLY"
      }
    ]
  }
}
